# 2024-2025cpl

./: CMakeLists.txt
homework/1/: CMakeLists.txt
homework/1/FindiSecondMax/: CMakeLists.txt  FindiSecondMax.c
homework/1/ascii/: CMakeLists.txt  ascii.c
homework/1/bengtie/: CMakeLists.txt  bengtie.c
homework/1/change/: CMakeLists.txt  change.c
homework/1/equation/: CMakeLists.txt  equation.c
homework/1/gas/: CMakeLists.txt  gas.c
homework/1/gravity/: CMakeLists.txt  gravity.c
homework/1/julian/: CMakeLists.txt  julian.c
homework/1/mid/: CMakeLists.txt  mid.c
homework/1/pi-1/: CMakeLists.txt  pi-1.c
homework/1/pi-2/: CMakeLists.txt  pi-2.c
homework/1/pmtdm/: CMakeLists.txt  pmtdm.c
homework/1/sensor/: CMakeLists.txt  sensor.c
homework/1/swap/: CMakeLists.txt  swap.c
homework/1/time/: CMakeLists.txt  time.c
homework/1/trump/: CMakeLists.txt  trump.c
homework/2/: CMakeLists.txt
homework/2/blackhole/: CMakeLists.txt  blackhole.c
homework/2/clock/: CMakeLists.txt  clock.c
homework/2/collatz/: CMakeLists.txt  collatz.c
homework/2/converter-1/: CMakeLists.txt  converter-1.c
homework/2/factorial-1/: CMakeLists.txt  factorial-1.c
homework/3/: CMakeLists.txt
homework/4/: CMakeLists.txt
luogu/: CMakeLists.txt
luogu/b2005/: CMakeLists.txt  b2005.c
luogu/b2025/: CMakeLists.txt  b2025.c
luogu/p1000/: CMakeLists.txt  p1000.c
luogu/p1001/: CMakeLists.txt  p1001.c
luogu/p1002/: CMakeLists.txt  p1002.c
luogu/p1003/: CMakeLists.txt  p1003.c
luogu/p1004/: CMakeLists.txt  p1004.c
luogu/p1007/: CMakeLists.txt  p1007.c
luogu/p1010/: CMakeLists.txt  p1010.c
luogu/p1012/: CMakeLists.txt  p1012.c
luogu/p1014/: CMakeLists.txt  p1014.c
luogu/p1024/: CMakeLists.txt  p1024.c
luogu/p1025/: CMakeLists.txt  p1025.c
luogu/p1028/: CMakeLists.txt  p1028.c
luogu/p1033/: CMakeLists.txt  p1033.c
luogu/p1035/: CMakeLists.txt  p1035.c
luogu/p1036/: CMakeLists.txt  p1036.c
luogu/p1042/: CMakeLists.txt  p1042.c
luogu/p1046/: CMakeLists.txt  p1046.c
luogu/p1047/: CMakeLists.txt  p1047.c
luogu/p1051/: CMakeLists.txt  p1051.c
luogu/p1055/: CMakeLists.txt  p1055.c
luogu/p1059/: CMakeLists.txt  p1509.c
luogu/p1067/: CMakeLists.txt  p1067.c
luogu/p1085/: CMakeLists.txt  p1085.c
luogu/p1089/: CMakeLists.txt  p1089.c
luogu/p1150/: CMakeLists.txt  p1150.c
luogu/p1151/: CMakeLists.txt  p1151.c
luogu/p1177/: CMakeLists.txt  p1177.c
luogu/p1179/: CMakeLists.txt  p1179.c
luogu/p1192/: CMakeLists.txt  p1192.c
luogu/p1208/: CMakeLists.txt  p1208.c
luogu/p1226/: CMakeLists.txt  p1226.c
luogu/p1307/: CMakeLists.txt  p1307.c
luogu/p1308/: CMakeLists.txt  p1308.c
luogu/p1328/: CMakeLists.txt  p1328.c
luogu/p1387/: CMakeLists.txt  p1387.c
luogu/p1421/: CMakeLists.txt  p1421.c
luogu/p1427/: CMakeLists.txt  p1427.c
luogu/p1464/: CMakeLists.txt  p1464.c
luogu/p1563/: CMakeLists.txt  p1563.c
luogu/p1601/: CMakeLists.txt  p1601.c
luogu/p1908/: CMakeLists.txt  p1908.c
luogu/p1909/: CMakeLists.txt  p1909.c
luogu/p1909mis/: CMakeLists.txt  p1909error.c
luogu/p1914/: CMakeLists.txt  p1914.c
luogu/p1980/: CMakeLists.txt  p1980.c
luogu/p2010/: CMakeLists.txt  p2010.c
luogu/p2141/: CMakeLists.txt  p2141.c
luogu/p2615/: CMakeLists.txt  p2615.c
luogu/p2678/: CMakeLists.txt  p2678.c
luogu/p4994/: CMakeLists.txt  p4994.c
luogu/p5015/: CMakeLists.txt  p5015.c
luogu/p5534/: CMakeLists.txt  p5534.c
luogu/p5587/: CMakeLists.txt  p5587.c
luogu/p5594/: CMakeLists.txt  p5594.c
luogu/p5703/: CMakeLists.txt  p5703.c
luogu/p5704/: CMakeLists.txt  p5704.c
luogu/p5705/: CMakeLists.txt  p5705.c
luogu/p5706/: CMakeLists.txt  p5706.c
luogu/p5708/: CMakeLists.txt  p5708.c
luogu/p5733/: CMakeLists.txt  p5733.c
preview/: CMakeLists.txt
preview/Goldbach/: CMakeLists.txt  Goldbach.c
preview/Quine/: CMakeLists.txt  Quine.c
preview/Random-Walk/: CMakeLists.txt  Random-Walk.c
preview/a+b/: CMakeLists.txt
preview/coprime/: CMakeLists.txt  coprime.c
preview/e/: CMakeLists.txt
preview/hello/: CMakeLists.txt
preview/matrix/: CMakeLists.txt  matrix.c
preview/matrixTwo/: CMakeLists.txt  matrixTwo.c
preview/max-mean-coount-positive/: CMakeLists.txt
preview/maxDistance/: CMakeLists.txt  maxDistance.c
preview/maxNum/: CMakeLists.txt  maxNum.c
preview/maximum/: CMakeLists.txt  maximum.c
preview/median/: CMakeLists.txt  median.c
preview/poker/: CMakeLists.txt  poker.c
preview/power/: CMakeLists.txt  power.c
preview/power-pro/: CMakeLists.txt  power-pro.c
preview/reverse/: CMakeLists.txt  reverse.c
preview/selection_sort/: CMakeLists.txt  selection_sort.c
preview/sqrt/: sqrt.c
(+106 files in other folders)
