add_subdirectory(p1000)
add_subdirectory(p1001)
add_subdirectory(p1002)
add_subdirectory(p1003)
add_subdirectory(p1004)
add_subdirectory(p1035)
add_subdirectory(p1046)
add_subdirectory(p1047)
add_subdirectory(p1085)
add_subdirectory(p1089)
add_subdirectory(p1150)
add_subdirectory(p1051)
add_subdirectory(p5733)
add_subdirectory(p1151)
add_subdirectory(p1007)
add_subdirectory(p1033)
add_subdirectory(b2025)
add_subdirectory(b2005)
add_subdirectory(p5703)
add_subdirectory(p5704)
add_subdirectory(p5705)
add_subdirectory(p5706)
add_subdirectory(p5708)
add_subdirectory(p1914)