add_subdirectory(p1000)
add_subdirectory(p1001)
add_subdirectory(p1002)
add_subdirectory(p1003)
add_subdirectory(p1004)
add_subdirectory(p1035)
add_subdirectory(p1046)
add_subdirectory(p1047)
add_subdirectory(p1085)
add_subdirectory(p1089)
add_subdirectory(p1150)
add_subdirectory(p1051)
add_subdirectory(p5733)
add_subdirectory(p1151)
add_subdirectory(p1007)
add_subdirectory(p1033)
add_subdirectory(b2025)
add_subdirectory(b2005)
add_subdirectory(p5703)
add_subdirectory(p5704)
add_subdirectory(p5705)
add_subdirectory(p5706)
add_subdirectory(p5708)
add_subdirectory(p1914)
add_subdirectory(p1012)
add_subdirectory(p5587)
add_subdirectory(p1067)
add_subdirectory(p1028)
add_subdirectory(p1421)
add_subdirectory(p1909mis)
add_subdirectory(p1909)
add_subdirectory(p1980)
add_subdirectory(p1014)
add_subdirectory(p1307)
add_subdirectory(p1427)
add_subdirectory(p2141)
add_subdirectory(p5594)
add_subdirectory(p5015)
add_subdirectory(p1055)
add_subdirectory(p1308)
add_subdirectory(p5534)
add_subdirectory(p2010)
add_subdirectory(p1036)
add_subdirectory(p1464)
add_subdirectory(p1192)
add_subdirectory(p1025)
add_subdirectory(p4994)
add_subdirectory(p1328)
add_subdirectory(p1563)
add_subdirectory(p1042)
add_subdirectory(p1179)
add_subdirectory(p2615)
add_subdirectory(p1024)
add_subdirectory(p1908)
add_subdirectory(p2678)
add_subdirectory(p1226)
add_subdirectory(p1177)
add_subdirectory(p1010)
add_subdirectory(p1208)
add_subdirectory(p1387)
add_subdirectory(p1059)
add_subdirectory(p1601)
add_subdirectory(p2482)