add_subdirectory(hello)
add_subdirectory(e)
add_subdirectory(a+b)
add_subdirectory(sqrt)
add_subdirectory(roll-game)
add_subdirectory(selection_sort)
add_subdirectory(fib_number)
add_subdirectory(Random-Walk)
add_subdirectory(magic-square)
add_subdirectory(max-mean-coount-positive)
add_subdirectory(median)
add_subdirectory(power)
add_subdirectory(power-pro)
add_subdirectory(poker)
add_subdirectory(matrix)
add_subdirectory(matrixTwo)
add_subdirectory(coprime)
add_subdirectory(Goldbach)
add_subdirectory(maxDistance)
add_subdirectory(maxNum)
add_subdirectory(maximum)
add_subdirectory(Quine)
add_subdirectory(reverse)
