add_subdirectory(pmtdm)
add_subdirectory(swap)
add_subdirectory(pi-1)
add_subdirectory(gravity)
add_subdirectory(time)
add_subdirectory(ascii)
add_subdirectory(change)
add_subdirectory(pi-2)
add_subdirectory(sensor)
add_subdirectory(julian)
add_subdirectory(gas)
add_subdirectory(equation)
add_subdirectory(trump)
add_subdirectory(FindiSecondMax)
add_subdirectory(mid)
add_subdirectory(bengtie)