add_subdirectory(rank)
add_subdirectory(clock)
add_subdirectory(leap)
add_subdirectory(selfpower)
add_subdirectory(series)
add_subdirectory(collatz)
add_subdirectory(lnverse)
add_subdirectory(triangle)
add_subdirectory(single)
add_subdirectory(factorial-1)
add_subdirectory(converter-1)
add_subdirectory(blackhole)
add_subdirectory(standup)
add_subdirectory(factorial-2)
add_subdirectory(primeEratosthenes)
add_subdirectory(primeEular)