add_subdirectory(gcd)
add_subdirectory(multiplication)
add_subdirectory(calendar)
add_subdirectory(calculator)
add_subdirectory(decimal)
add_subdirectory(palindrome)
add_subdirectory(statistics-2)
add_subdirectory(palindrome-1)
add_subdirectory(flip)
add_subdirectory(josephus)
add_subdirectory(bubble-sort)
add_subdirectory(b-ternary-1)
add_subdirectory(b-ternary-2)
add_subdirectory(quick-sort)