add_subdirectory(similarity)
add_subdirectory(equation-2)
add_subdirectory(life)
add_subdirectory(formation)
add_subdirectory(bit)
add_subdirectory(matrix-mult)
add_subdirectory(guess)
add_subdirectory(sudoku)
add_subdirectory(mines-1)
add_subdirectory(magic-square-plus)
add_subdirectory(match)
add_subdirectory(behaviors)
add_subdirectory(obstacle)
add_subdirectory(trace)
add_subdirectory(softmax)